--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -7,7 +7,8 @@
     android:orientation="vertical"
     android:gravity="center_horizontal"
     android:background="@drawable/shape"
-    android:padding="8dp">
+    android:padding="8dp"
+    android:layout_margin="16dp">
 
     <TextView
         android:id="@+id/section_name"
@@ -16,9 +17,11 @@
         tools:text="Politics"
         android:textColor="@color/section_name"
         android:fontFamily="sans-serif-medium"
-        android:textSize="36sp"
+        android:textSize="32sp"
         android:layout_weight="1"
-        android:gravity="center" />
+        android:gravity="center"
+        android:textAllCaps="true"
+        android:padding="16dp"/>
 
     <TextView
         android:id="@+id/section_title"
@@ -26,10 +29,11 @@
         android:layout_height="0dp"
         tools:text="Working-class concerns ignored in Brexit debate | Letters"
         android:fontFamily="sans-serif-medium"
-        android:textColor="@color/section_title"
-        android:textSize="42sp"
+        android:textColor="@color/section_name"
+        android:textSize="26sp"
         android:layout_weight="2"
-        android:gravity="center"/>
+        android:gravity="center"
+        android:padding="16dp"/>
 
     <TextView
         android:id="@+id/section_date"
@@ -38,8 +42,10 @@
         tools:text="2018-06-22T15:45:21Z"
         android:fontFamily="sans-serif-medium"
         android:textColor="@color/section_name"
-        android:textSize="24sp"
+        android:textSize="22sp"
         android:layout_weight="1"
-        android:gravity="center"/>
+        android:gravity="center"
+        android:textStyle="bold"
+        android:padding="16dp"/>
 
 </LinearLayout>
