--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#cfd8dc</color>
+    <color name="colorPrimary">#00695c</color>
     <color name="colorPrimaryDark">#212121</color>
     <color name="colorAccent">#757575</color>
 
     <color name="section_name">#cfd8dc</color>
     <color name="section_title">#b0bec5</color>
-    <color name="section_date">#90a4ae</color>
+
 </resources>
